Remove version debug info; Set language so it doesn't default to ruby

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
+language: minimal
+
 sudo: required
 
 services:
   - docker
 
 script:
-  - docker version
-  - docker-compose version
   - docker-compose build
   - docker-compose run app rake test
