Util for reading/writing yaml files

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,12 @@
 AllCops:
   TargetRubyVersion: 2.3
 
+Layout/EmptyLinesAroundClassBody:
+  Enabled: false
+
+Layout/EmptyLinesAroundBlockBody:
+  Enabled: false
+
 Metrics/BlockLength:
   Enabled: false
 
