Update docker config
- Change project root to /climbcomp so that the teletype CLI works as expected
- Cache /root dir so that the oauth config is persisted between container runs
- Expose port 3001 for the callback server
- README project setup instructions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,17 @@
 version: '3'
 volumes:
   app-bundle:
+  app-home:
 services:
   app:
     build: .
     env_file:
       - '.env'
     volumes:
-      - .:/app:cached
+      - .:/climbcomp:cached
       - app-bundle:/usr/local/bundle
+      - app-home:/root
+    ports:
+      - 3001:3001
     stdin_open: true
     tty: true
