--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,6 +13,10 @@ Layout/EmptyLinesAroundModuleBody:
 Metrics/BlockLength:
   Enabled: false
 
+Metrics/ClassLength:
+  Exclude:
+    - 'test/**/*'
+
 Metrics/LineLength:
   Enabled: false
 
